--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.healthconsultancyservicesandroidapp" >
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -8,14 +9,24 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
-        <activity android:name=".MainActivity" >
+        android:usesCleartextTraffic="true"
+        android:theme="@style/AppTheme">
+        <activity android:name=".PaitentLoginCred"></activity>
+        <activity android:name=".DrLoginCred" />
+        <activity android:name=".PatientRegister" />
+        <activity android:name=".DoctorRegister" />
+        <activity android:name=".Registration" />
+        <activity android:name=".ForgetPassword" />
+        <activity android:name=".splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".PatientDashboard" />
+        <activity android:name=".DoctorDashboard" />
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
