--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.healthconsultancyservicesandroidapp" >
+    package="com.example.healthconsultancyservicesandroidapp">
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -9,9 +10,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".PaitentLoginCred"></activity>
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".PatientProfile"></activity>
+        <activity android:name=".DoctorProfile" />
+        <activity android:name=".PaitentLoginCred" />
         <activity android:name=".DrLoginCred" />
         <activity android:name=".PatientRegister" />
         <activity android:name=".DoctorRegister" />
