--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ViewAppointmentPatient"></activity>
-        <activity android:name=".BookAppointment" />
+        <activity android:name=".BookAppointment"></activity>
         <activity android:name=".PatientProfile" />
         <activity android:name=".DoctorProfile" />
         <activity android:name=".PaitentLoginCred" />
